force-app/main/default/objects/enquetedeSatisfaction__c/enquetedeSatisfaction__c.object-meta.xml
<CustomObject>
    <label>Enquête de Satisfaction</label>
    <nameField>
        <displayFormat>SATISF-{0000}</displayFormat>
        <label>Enquête de Satisfaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquêtes de Satisfaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>