force-app/main/default/objects/enquetedeSatisfaction__c/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <formula>TEXT( Lead__r.Branding__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branding</label>
    <type>Text</type>
</CustomField>