force-app/main/default/objects/enquetedeSatisfaction__c/fields/commentaireGlobal__c.field-meta.xml
<CustomField>
    <fullName>commentaireGlobal__c</fullName>
    <label>Commentaire Global</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>