force-app/main/default/objects/enquetedeSatisfaction__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <label>Enquête à réaliser le :</label>
    <type>Date</type>
</CustomField>