force-app/main/default/objects/enquetedeSatisfaction__c/fields/ComptaSigneeCheck__c.field-meta.xml
<CustomField>
    <fullName>ComptaSigneeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comptabilité signée?</label>
    <type>Checkbox</type>
</CustomField>