force-app/main/default/objects/enquetedeSatisfaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Cabinet</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquêtes de Satisfaction</relationshipLabel>
    <relationshipName>enquetesdeSatisfaction</relationshipName>
    <type>Lookup</type>
</CustomField>