force-app/main/default/objects/enquetedeSatisfaction__c/fields/ContactLead__c.field-meta.xml
<CustomField>
    <fullName>ContactLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquêtes de Satisfaction (Contact Lead)</relationshipLabel>
    <relationshipName>EnquetesDeSatisfactionClient</relationshipName>
    <type>Lookup</type>
</CustomField>