force-app/main/default/objects/enquetedeSatisfaction__c/fields/Date_de_transfert__c.field-meta.xml
<CustomField>
    <fullName>Date_de_transfert__c</fullName>
    <formula>Lead__r.DateTransfert__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de transfert</label>
    <type>Date</type>
</CustomField>