force-app/main/default/objects/enquetedeSatisfaction__c/fields/DateEnquete__c.field-meta.xml
<CustomField>
    <fullName>DateEnquete__c</fullName>
    <label>Date Enquête</label>
    <type>Date</type>
</CustomField>