force-app/main/default/objects/enquetedeSatisfaction__c/fields/Evaluation_a_posteriori__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_a_posteriori__c</fullName>
    <label>A l’intention de signer après échange 1?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Froid</fullName>
            </value>
            <value>
                <fullName>Tiède</fullName>
            </value>
            <value>
                <fullName>Chaud</fullName>
            </value>
            <value>
                <fullName>Bouillant</fullName>
                <label>Bouillant !</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>