force-app/main/default/objects/enquetedeSatisfaction__c/fields/KbisReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>KbisReceptionDate__c</fullName>
    <formula>Lead__r.KbisReceptionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de réception KBIS</label>
    <type>DateTime</type>
</CustomField>