force-app/main/default/objects/enquetedeSatisfaction__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Enquêtes de Satisfaction</relationshipLabel>
    <relationshipName>SatsifactionSurveyLead</relationshipName>
    <type>Lookup</type>
</CustomField>