force-app/main/default/objects/enquetedeSatisfaction__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>TEXT(Partner__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>