force-app/main/default/objects/enquetedeSatisfaction__c/fields/negative_points__c.field-meta.xml
<CustomField>
    <fullName>negative_points__c</fullName>
    <label>Ce qui vous a déplu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>