force-app/main/default/objects/enquetedeSatisfaction__c/fields/notedeSatisfactionGlobale__c.field-meta.xml
<CustomField>
    <fullName>notedeSatisfactionGlobale__c</fullName>
    <label>Note de Satisfaction Globale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>Ne se prononce pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>