force-app/main/default/objects/enquetedeSatisfaction__c/fields/notedeSatisfactionGlobaleClone__c.field-meta.xml
<CustomField>
    <fullName>notedeSatisfactionGlobaleClone__c</fullName>
    <label>Note de Satisfaction Globale Clone</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>