force-app/main/default/objects/enquetedeSatisfaction__c/fields/notedeSatisfactionGlobaleFormula__c.field-meta.xml
<CustomField>
    <fullName>notedeSatisfactionGlobaleFormula__c</fullName>
    <formula>IF(ISPICKVAL(notedeSatisfactionGlobale__c , &#39;Ne se prononce pas&#39;), -1,  VALUE(TEXT(notedeSatisfactionGlobale__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>notedeSatisfactionGlobaleFormula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>