force-app/main/default/objects/enquetedeSatisfaction__c/fields/notedeSatisfactionPrisecontactcheck__c.field-meta.xml
<CustomField>
    <fullName>notedeSatisfactionPrisecontactcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satisfaction prise de contact</label>
    <type>Checkbox</type>
</CustomField>