force-app/main/default/objects/enquetedeSatisfaction__c/fields/NoteReactiviteNpsPassive__c.field-meta.xml
<CustomField>
    <fullName>NoteReactiviteNpsPassive__c</fullName>
    <formula>IF((ISPICKVAL(RepresentativeReactivityNote__c,&quot;Ne se prononce pas&quot;)),1, 
IF(AND( 
VALUE(TEXT(RepresentativeReactivityNote__c)) &gt; 6 , 
VALUE(TEXT(RepresentativeReactivityNote__c)) &lt; 9 ), 
1, 
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note réactivité NPSPassive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>