force-app/main/default/objects/enquetedeSatisfaction__c/fields/NoteReactiviteNpsPromoter__c.field-meta.xml
<CustomField>
    <fullName>NoteReactiviteNpsPromoter__c</fullName>
    <formula>IF((ISPICKVAL(RepresentativeReactivityNote__c,&quot;Ne se prononce pas&quot;)), 
0, 
IF( VALUE(TEXT(RepresentativeReactivityNote__c)) &gt; 8, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note réactivité NPSPromoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>