force-app/main/default/objects/enquetedeSatisfaction__c/fields/noteSatisfactionGlobaleNpsDetractor__c.field-meta.xml
<CustomField>
    <fullName>noteSatisfactionGlobaleNpsDetractor__c</fullName>
    <formula>IF((ISPICKVAL(notedeSatisfactionGlobale__c,&quot;Ne se prononce pas&quot;)), 
0, 
IF( VALUE(TEXT(notedeSatisfactionGlobale__c)) &lt; 7, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Satisfaction Globale NPSDetractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>