force-app/main/default/objects/enquetedeSatisfaction__c/fields/NoteStartNPSDetractor__c.field-meta.xml
<CustomField>
    <fullName>NoteStartNPSDetractor__c</fullName>
    <formula>IF( VALUE(TEXT(StartSatisfactionNote__c)) &lt; 7, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Start.fr NPSDetractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>