force-app/main/default/objects/enquetedeSatisfaction__c/fields/NoteStartNpsPassive__c.field-meta.xml
<CustomField>
    <fullName>NoteStartNpsPassive__c</fullName>
    <formula>IF(AND( 
VALUE(TEXT(StartSatisfactionNote__c)) &gt; 6 , 
VALUE(TEXT(StartSatisfactionNote__c)) &lt; 8 
), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Start.fr NPSPassive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>