force-app/main/default/objects/enquetedeSatisfaction__c/fields/NoteStartNpsPromoter__c.field-meta.xml
<CustomField>
    <fullName>NoteStartNpsPromoter__c</fullName>
    <formula>IF( VALUE(TEXT(StartSatisfactionNote__c)) &gt; 8, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Start.fr NPSPromoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>