force-app/main/default/objects/enquetedeSatisfaction__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <formula>Lead__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro</label>
    <type>Text</type>
</CustomField>