force-app/main/default/objects/enquetedeSatisfaction__c/fields/OrigineWebsite__c.field-meta.xml
<CustomField>
    <fullName>OrigineWebsite__c</fullName>
    <formula>TEXT( Lead__r.OrigineWebsite__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site d&#39;origine</label>
    <type>Text</type>
</CustomField>