force-app/main/default/objects/enquetedeSatisfaction__c/fields/Partenaire_interne__c.field-meta.xml
<CustomField>
    <fullName>Partenaire_interne__c</fullName>
    <formula>Partner__r.InternalPartner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partenaire interne</label>
    <type>Checkbox</type>
</CustomField>