force-app/main/default/objects/enquetedeSatisfaction__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenaire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquêtes de Satisfaction</relationshipLabel>
    <relationshipName>SatisfactionSurvey</relationshipName>
    <type>Lookup</type>
</CustomField>