force-app/main/default/objects/enquetedeSatisfaction__c/fields/positive_points__c.field-meta.xml
<CustomField>
    <fullName>positive_points__c</fullName>
    <label>Ce qui vous a plu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>