force-app/main/default/objects/enquetedeSatisfaction__c/fields/PropaleNotesNPSDetractor__c.field-meta.xml
<CustomField>
    <fullName>PropaleNotesNPSDetractor__c</fullName>
    <formula>IF((ISPICKVAL(NotePropale__c,&quot;Ne se prononce pas&quot;)), 
0, 
IF( VALUE(TEXT(NotePropale__c)) &lt; 7, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Propale NPSDetractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>