force-app/main/default/objects/enquetedeSatisfaction__c/fields/PropaleNotesNPSPromoter__c.field-meta.xml
<CustomField>
    <fullName>PropaleNotesNPSPromoter__c</fullName>
    <formula>IF((ISPICKVAL(NotePropale__c,&quot;Ne se prononce pas&quot;)), 
0, 
IF( VALUE(TEXT(NotePropale__c)) &gt; 8, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Propale NPSPromoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>