force-app/main/default/objects/enquetedeSatisfaction__c/fields/Proposition_d_un_cabinet_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Proposition_d_un_cabinet_partenaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposition d’un cabinet partenaire?</label>
    <type>Checkbox</type>
</CustomField>