force-app/main/default/objects/enquetedeSatisfaction__c/fields/Recommandation_Tiime_Crea__c.field-meta.xml
<CustomField>
    <fullName>Recommandation_Tiime_Crea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prêt à recommander Tiime Créa?</label>
    <type>Checkbox</type>
</CustomField>