force-app/main/default/objects/enquetedeSatisfaction__c/fields/RecommandationPartenaireCheck__c.field-meta.xml
<CustomField>
    <fullName>RecommandationPartenaireCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prêt à recommander le partenaire?</label>
    <type>Checkbox</type>
</CustomField>