force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeName__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeName__c</fullName>
    <formula>Contact__r.Owner.LastName &amp;&quot; &quot;&amp;   Contact__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom de l&#39;Interlocuteur</label>
    <type>Text</type>
</CustomField>