force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeReactivityNoteClone__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeReactivityNoteClone__c</fullName>
    <label>Representative Reactivity Note Clone</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>