force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeReactivityNoteFormula__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeReactivityNoteFormula__c</fullName>
    <formula>IF(ISPICKVAL(RepresentativeReactivityNote__c, &#39;Ne se prononce pas&#39;), -1,  VALUE(TEXT(RepresentativeReactivityNote__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RepresentativeReactivityNoteFormula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>