force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeSkillsNotesClone__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeSkillsNotesClone__c</fullName>
    <label>Representative Skills Notes Clone</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>