force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeSkillsNotesFormula__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeSkillsNotesFormula__c</fullName>
    <formula>IF(ISPICKVAL(RepresentativeSkillsNotes__c, &#39;Ne se prononce pas&#39;), -1,  VALUE(TEXT(RepresentativeSkillsNotes__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RepresentativeSkillsNotesFormula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>