force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeSkillsNotesNPSDetractor__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeSkillsNotesNPSDetractor__c</fullName>
    <formula>IF((ISPICKVAL(RepresentativeSkillsNotes__c,&quot;Ne se prononce pas&quot;)),
			0,
			IF( VALUE(TEXT(RepresentativeSkillsNotes__c)) &lt; 7, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note compétence NPSDetractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>