force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeSkillsNotesNPSPassive__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeSkillsNotesNPSPassive__c</fullName>
    <formula>IF((ISPICKVAL(RepresentativeSkillsNotes__c,&quot;Ne se prononce pas&quot;)),1,
				IF(AND( 
VALUE(TEXT(RepresentativeSkillsNotes__c)) &gt; 6 , 
VALUE(TEXT(RepresentativeSkillsNotes__c)) &lt; 9 ), 
			1,
						0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Compétences NPSPassive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>