force-app/main/default/objects/enquetedeSatisfaction__c/fields/RepresentativeSkillsNotesNPSPromoter__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeSkillsNotesNPSPromoter__c</fullName>
    <formula>IF((ISPICKVAL(RepresentativeSkillsNotes__c,&quot;Ne se prononce pas&quot;)), 
0, 
IF( VALUE(TEXT(RepresentativeSkillsNotes__c)) &gt; 8, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note compétence NPSPromoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>