force-app/main/default/objects/enquetedeSatisfaction__c/fields/Satisfaction1contactNotesNPSPassive__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction1contactNotesNPSPassive__c</fullName>
    <formula>IF((ISPICKVAL(notedeSatisfactionPrisecontact__c,&quot;Ne se prononce pas&quot;)),1,
				IF(AND( 
VALUE(TEXT(notedeSatisfactionPrisecontact__c)) &gt; 6 , 
VALUE(TEXT(notedeSatisfactionPrisecontact__c)) &lt; 9 ), 
			1,
						0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note de satisf contact NPSPassive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>