force-app/main/default/objects/enquetedeSatisfaction__c/fields/Satisfaction1contactNotesNPSPromoter__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction1contactNotesNPSPromoter__c</fullName>
    <formula>IF((ISPICKVAL(notedeSatisfactionPrisecontact__c,&quot;Ne se prononce pas&quot;)), 
0, 
IF( VALUE(TEXT(notedeSatisfactionPrisecontact__c)) &gt; 8, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note de satisf contact NPSPromoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>