force-app/main/default/objects/enquetedeSatisfaction__c/fields/SimplicityNotesNPSDetractor__c.field-meta.xml
<CustomField>
    <fullName>SimplicityNotesNPSDetractor__c</fullName>
    <formula>IF((ISPICKVAL(Simplicite_du_process__c,&quot;Ne se prononce pas&quot;)), 
0, 
IF( VALUE(TEXT(Simplicite_du_process__c)) &lt; 7, 1, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note simplicité NPSDetractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>