force-app/main/default/objects/enquetedeSatisfaction__c/fields/StartSatisfactionNoteClone__c.field-meta.xml
<CustomField>
    <fullName>StartSatisfactionNoteClone__c</fullName>
    <label>Start Satisfaction Note Clone</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>