force-app/main/default/objects/enquetedeSatisfaction__c/fields/StartSatisfactionNoteFormula__c.field-meta.xml
<CustomField>
    <fullName>StartSatisfactionNoteFormula__c</fullName>
    <formula>IF(ISPICKVAL(StartSatisfactionNote__c, &#39;Ne se prononce pas&#39;), -1,  VALUE(TEXT(StartSatisfactionNote__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StartSatisfactionNoteFormula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>