force-app/main/default/objects/enquetedeSatisfaction__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>Nouvelle</label>
            </value>
            <value>
                <fullName>Call 1</fullName>
                <label>Rappel 1</label>
            </value>
            <value>
                <fullName>Call 2</fullName>
                <label>Rappel 2</label>
            </value>
            <value>
                <fullName>Rappel</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
                <label>Réalisée</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <label>Echouée</label>
            </value>
            <value>
                <fullName>DoNotCall</fullName>
                <label>Ne plus appeler</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>